# internal/dto/response/user.go
@@ -9,3 +9,9 @@ type UserLoginResponse struct {
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
 }
+
+type UserProfileResponse struct {
+	Email        string `json:"email"`
+	Name         string `json:"name"`
+	ProfileImage string `json:"profile_image"`
+}
